--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       class="fixed-top d-flex align-items-center header-transparent"
     >
       <div class="container d-flex align-items-center">
-        <div class="logo mr-auto">
+        <div class="logo mr-auto"></div>
           <h1 class="text-light">
             <a href="index.html"><span>SHIRLEY</span></a>
           </h1>
@@ -117,8 +117,9 @@
           <div class="row">
             <div
               class="col-lg-5 align-items-stretch video-box"
-              style="background-image: url('assets/img/about.jpg')"
+              
             >
+            <img src="assets/img/hello.png">
             </div>
 
             <div
@@ -827,38 +828,22 @@
         <div class="container mt-5">
           <div class="info-wrap">
             <div class="row">
-              <div class="col-lg-3 col-md-6 info">
-                <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street<br />New York, NY 535022</p>
-              </div>
 
-              <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
-                <i class="icofont-clock-time icofont-rotate-90"></i>
-                <h4>Open Hours:</h4>
-                <p>Monday-Saturday:<br />11:00 AM - 2300 PM</p>
-              </div>
-
-              <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
-                <i class="icofont-envelope"></i>
+              <div class="col-lg-6 col-md-12 info mt-4 mt-lg-0">
+                <a href="mailto:shirleychristabel01@gmail.com"><i class="icofont-envelope"></i></a>
                 <h4>Email:</h4>
-                <p>contact@example.com</p>
+                <p>shirleychristabel01@gmail.com</p>
               </div>
 
-              <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
-                <i class="icofont-phone"></i>
+              <div class="col-lg-6 col-md-12 info mt-4 mt-lg-0">
+                <a href="tel:+6383474471"><i class="icofont-phone"></i></a>
                 <h4>Call:</h4>
-                <p>+1 5589 22475 14</p>
+                <p>+91 63834 74471</p>
               </div>
             </div>
           </div>
 
-          <form
-            action="forms/contact.php"
-            method="post"
-            role="form"
-            class="php-email-form"
-          >
+          <form action="https://formspree.io/f/mvodzzgr" method="POST" class="php-email-formm">
             <div class="form-row">
               <div class="col-md-6 form-group">
                 <input
