--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       class="fixed-top d-flex align-items-center header-transparent"
     >
       <div class="container d-flex align-items-center">
-        <div class="logo mr-auto"></div>
+        <div class="logo mr-auto">
           <h1 class="text-light">
             <a href="index.html"><span>SHIRLEY</span></a>
           </h1>
@@ -843,7 +843,7 @@
             </div>
           </div>
 
-          <form action="https://formspree.io/f/mvodzzgr" method="POST" class="php-email-formm">
+          <form action="https://formspree.io/f/mvodzzgr" method="post" class="php-email-form">
             <div class="form-row">
               <div class="col-md-6 form-group">
                 <input
