--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
       class="fixed-top d-flex align-items-center header-transparent"
     >
       <div class="container d-flex align-items-center">
-        <div class="logo mr-auto">
-          <h1 class="text-light">
-            <a href="index.html"><span>SHIRLEY</span></a>
+        <div class="logo mr-auto d-flex">
+          <a href="index.html"><img src="assets/img/smile.png" alt="" class="img-fluid" style="background-color: #ffffff;border-radius: 50%"></a>
+          <h1 class="text-light ml-3 mt-2">
+            <a href="index.html">SHIRLEY</a>
           </h1>
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
         </div>
 
         <nav class="nav-menu d-none d-lg-block">
