--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
             </div>
           </div>
 
-          <form action="https://formspree.io/f/mvodzzgr" method="post" class="php-email-form">
+          <form action="https://formspree.io/f/xwkaorqz" method="post" class="php-email-form">
             <div class="form-row">
               <div class="col-md-6 form-group">
                 <input
@@ -860,7 +860,7 @@
                 <input
                   type="email"
                   class="form-control"
-                  name="email"
+                  name="_replyto"
                   id="email"
                   placeholder="Your Email"
                   data-rule="email"
@@ -894,7 +894,6 @@
             </div>
             <div class="mb-3">
               <div class="loading">Loading</div>
-              <div class="error-message"></div>
               <div class="sent-message">
                 Your message has been sent. Thank you!
               </div>
