--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     >
       <div class="container d-flex align-items-center">
         <div class="logo mr-auto d-flex">
-          <a href="index.html"><img src="assets/img/smile.png" alt="" class="img-fluid" style="background-color: #ffffff;border-radius: 50%"></a>
+          <a href="index.html"><img src="assets/img/smile.png" alt="" class="img-fluid" style="background-color: #ffffff;border-radius: 50%; padding: 2px"></a>
           <h1 class="text-light ml-3 mt-2">
             <a href="index.html">SHIRLEY</a>
           </h1>
@@ -85,18 +85,14 @@
             <!-- Slide 1 -->
             <div
               class="carousel-item active"
-              style="background: url(assets/img/slide/slide-1.jpg)"
+              style="background: url(assets/img/slide/slide-1.jpg); background-repeat: no-repeat; background-size: cover"
             >
               <div class="carousel-container">
                 <div class="carousel-content">
                   <h2 class="animate__animated animate__fadeInDown">
                     <span>Shirley</span> Christabel</h2>
                   <p class="animate__animated animate__fadeInUp">
-                    Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea
-                    ut et est quaerat sequi nihil ut aliquam. Occaecati alias
-                    dolorem mollitia ut. Similique ea voluptatem. Esse
-                    doloremque accusamus repellendus deleniti vel. Minus et
-                    tempore modi architecto.
+                    Inga una pathi one line le potuko
                   </p>
                   <div>
                     <a  href="#about" class="btn-book animate__animated animate__fadeInUp scrollto">More About me</a>
