--- a/index.html
+++ b/index.html
@@ -131,28 +131,18 @@
             </div>
               <div class="content">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Duis aute irure dolor in reprehenderit
-                </p>
-                <p class="font-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  about me content lam inga erakiko, but idhu one line le podama
+                  jus type like oru 2 or 3 line set. soli mudichiten but inum extra line theva for design
+                  so intha text lam adhuku type panikren.
                 </p>
                 <ul>
                   <li>
-                    <i class="bx bx-check-double"></i> Ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    <i class="bx bx-check-double"></i> Inga points le solu una pathi.
+                  <li>
+                    <i class="bx bx-check-double"></i> but be sure to leave space before sentence.
                   </li>
                   <li>
-                    <i class="bx bx-check-double"></i> Duis aute irure dolor in
-                    reprehenderit in voluptate velit.
-                  </li>
-                  <li>
-                    <i class="bx bx-check-double"></i> Ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate trideta storacalaperda mastiro
-                    dolore eu fugiat nulla pariatur.
+                    <i class="bx bx-check-double"></i> yena bullet points ku aprm otti vara kudathu le, adhuku thaan.
                   </li>
                 </ul>
               </div>
@@ -175,8 +165,7 @@
                 <span>01</span>
                 <h4>Programmer</h4>
                 <p>
-                  Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et
-                  consectetur ducimus vero placeat
+                  un programming pathi few line inga potuko.
                 </p>
               </div>
             </div>
@@ -186,8 +175,7 @@
                 <span>02</span>
                 <h4>Presenter</h4>
                 <p>
-                  Dolorem est fugiat occaecati voluptate velit esse. Dicta
-                  veritatis dolor quod et vel dire leno para dest
+                  make sure all three boxes have koncho same amount of text
                 </p>
               </div>
             </div>
@@ -197,8 +185,7 @@
                 <span>03</span>
                 <h4>Participator</h4>
                 <p>
-                  Molestiae officiis omnis illo asperiores. Aut doloribus vitae
-                  sunt debitis quo vel nam quis
+                  because apathaan elam boxes uda size marama irukum
                 </p>
               </div>
             </div>
@@ -457,17 +444,16 @@
               <div class="tab-content">
                 <div class="tab-pane active show" id="tab-1">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-8 details order-2 order-lg-1 mt-5">
                       <h3>School</h3>
                       <p class="font-italic">
                         Spartan Mat. Hr. Sec School, Chennai
                       </p>
                       <p>
-                        Et nobis maiores eius. Voluptatibus ut enim blanditiis
-                        atque harum sint. Laborum eos ipsum ipsa odit magni.
-                        Incidunt hic ut molestiae aut qui. Est repellat minima
-                        eveniet eius et quis magni nihil. Consequatur dolorem
-                        quaerat quos qui similique accusamus nostrum rem vero
+                        unga school pathi pala pala lines inga add panu,
+                        then unoda views ethachu school pathi
+                        epdi it helped you to grow nu solu. adhu podhum. but oru small para
+                        alavuku size varanum pathuko. 
                       </p>
                     </div>
                     <div class="col-lg-4 text-center order-1 order-lg-2">
