--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
             </div>
           </div>
 
-          <form action="https://formspree.io/f/xwkaorqz" method="post" class="php-email-form">
+          <form action="https://formspree.io/f/xwkaorqz" method="post" class="php-email-formm">
             <div class="form-row">
               <div class="col-md-6 form-group">
                 <input
