experience height & color fix

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 mt-5">
               <ul class="nav nav-tabs flex-column">
                 <li class="nav-item">
                   <a
@@ -467,17 +467,16 @@
                 </div>
                 <div class="tab-pane" id="tab-2">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-8 details order-2 order-lg-1 mt-5">
                       <h3>College</h3>
                       <p class="font-italic">
                         Loyola ICAM College of Engineering and Technology, Chennai
                       </p>
                       <p>
-                        Ea ipsum voluptatem consequatur quis est. Illum error
-                        ullam omnis quia et reiciendis sunt sunt est. Non
-                        aliquid repellendus itaque accusamus eius et velit ipsa
-                        voluptates. Optio nesciunt eaque beatae accusamus lerode
-                        pakto madirna desera vafle de nideran pal
+                        unga college pathi pala pala lines inga add panu,
+                        then unoda views ethachu college pathi
+                        epdi it helped you to grow nu solu. adhu podhum. but oru small para
+                        alavuku size varanum pathuko. 
                       </p>
                     </div>
                     <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -491,17 +490,16 @@
                 </div>
                 <div class="tab-pane" id="tab-3">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-8 details order-2 order-lg-1 mt-5">
                       <h3>College Club</h3>
                       <p class="font-italic">
                         Loyola ICAM College of Engineering and Technology, Chennai
                       </p>
                       <p>
-                        Iure officiis odit rerum. Harum sequi eum illum corrupti
-                        culpa veritatis quisquam. Neque necessitatibus illo
-                        rerum eum ut. Commodi ipsam minima molestiae sed
-                        laboriosam a iste odio. Earum odit nesciunt fugiat sit
-                        ullam. Soluta et harum voluptatem optio quae
+                        Inga club pathi pala pala lines inga add panu,
+                        then unoda views ethachu pattarai pathi
+                        epdi it helped you to grow nu solu. adhu podhum. but oru small para
+                        alavuku size varanum pathuko. 
                       </p>
                     </div>
                     <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -515,7 +513,7 @@
                 </div>
                 <div class="tab-pane" id="tab-4">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-8 details order-2 order-lg-1 mt-5">
                       <h3>
                         Community
                       </h3>
@@ -523,42 +521,15 @@
                         OMR, Chennai
                       </p>
                       <p>
-                        Eaque consequuntur consequuntur libero expedita in
-                        voluptas. Nostrum ipsam necessitatibus aliquam fugiat
-                        debitis quis velit. Eum ex maxime error in consequatur
-                        corporis atque. Eligendi asperiores sed qui veritatis
-                        aperiam quia a laborum inventore
+                        Inga maker's tribe pathi pala pala lines inga add panu,
+                        then unoda views ethachu atha pathi
+                        epdi it helped you to grow nu solu. adhu podhum. but oru small para
+                        alavuku size varanum pathuko. 
                       </p>
                     </div>
                     <div class="col-lg-4 text-center order-1 order-lg-2">
                       <img
                         src="assets/img/specials-4.jpg"
-                        alt=""
-                        class="img-fluid"
-                      />
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane" id="tab-5">
-                  <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
-                      <h3>
-                        Est eveniet ipsam sindera pad rone matrelat sando reda
-                      </h3>
-                      <p class="font-italic">
-                        Omnis blanditiis saepe eos autem qui sunt debitis porro
-                        quia.
-                      </p>
-                      <p>
-                        Exercitationem nostrum omnis. Ut reiciendis repudiandae
-                        minus. Omnis recusandae ut non quam ut quod eius qui.
-                        Ipsum quia odit vero atque qui quibusdam amet. Occaecati
-                        sed est sint aut vitae molestiae voluptate vel
-                      </p>
-                    </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
-                      <img
-                        src="assets/img/specials-5.jpg"
                         alt=""
                         class="img-fluid"
                       />
@@ -578,8 +549,7 @@
           <div class="section-title">
             <h2>My<span> Portfolio</span></h2>
             <p>
-              Ut possimus qui ut temporibus culpa velit eveniet modi omnis est
-              adipisci expedita at voluptas atque vitae autem.
+              The one line heading for your works gallery inga potuko 
             </p>
           </div>
 
@@ -763,7 +733,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
-              <h4>Director of Events</h4>
+              <h4>Director of HR</h4>
               <h5>2021 - Present</h5>
               <p><em>Pattarai, LICET</em></p>
             </div>
@@ -895,8 +865,7 @@
       <div class="container">
         <h3>SHIRLEY</h3>
         <p>
-          Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni
-          eligendi fuga maxime saepe commodi placeat.
+          A thank you message maari something or again edha one line about you potuko
         </p>
         <div class="social-links">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
