--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-    <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/smile.png" rel="icon" />
+    <link href="assets/img/smile.png" rel="apple-touch-icon" />
 
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i"
       rel="stylesheet"
     />
 
-    <!-- Vendor CSS Files -->
+    <!-- CSS Files -->
     <link
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,15 +30,9 @@
       rel="stylesheet"
     />
 
-    <!-- Template Main CSS File -->
+    <!-- Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
 
-    <!-- =======================================================
-  * Template Name: Delicious - v2.2.1
-  * Template URL: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   </head>
 
   <body>
@@ -51,15 +43,15 @@
     >
       <div class="container d-flex align-items-center">
         <div class="logo mr-auto d-flex">
-          <a href="index.html"><img src="assets/img/smile.png" alt="" class="img-fluid" style="background-color: #ffffff;border-radius: 50%"></a>
+          <a href="#hero"><img src="assets/img/smile.png" alt="" class="img-fluid" style="background-color: #ffffff;border-radius: 50%;padding: 2px;"></a>
           <h1 class="text-light ml-3 mt-2">
-            <a href="index.html">SHIRLEY</a>
+            <a href="#hero">SHIRLEY</a>
           </h1>
         </div>
 
         <nav class="nav-menu d-none d-lg-block">
           <ul>
-            <li class="active"><a href="index.html">Home</a></li>
+            <li class="active"><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#experience">Experience</a></li>
@@ -215,50 +207,50 @@
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4 mt-md-0">
             <div class="icon-box">
-              <div class="padding-icon"><img src="assets/img/svgs/python.svg"></div>
-              <h3><a href="">Python</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 mt-4 mt-lg-0">
-            <div class="icon-box">
-              <div class="padding-icon"><img src="assets/img/svgs/.svg"></div>
-              <h3><a href="">Java</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 mt-4">
-            <div class="icon-box">
               <div class="padding-icon"><img src="assets/img/svgs/js.svg"></div>
               <h3><a href="">JavaScript</a></h3>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-6 mt-4">
+          <div class="col-lg-3 col-md-4 col-6 mt-4 mt-lg-0">
             <div class="icon-box">
-              <div class="padding-icon"><img src="assets/img/svgs/.svg"></div>
-              <h3><a href="">SQL</a></h3>
+              <div class="padding-icon"><img src="assets/img/svgs/bs.svg"></div>
+              <h3><a href="">Bootstrap</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
             <div class="icon-box">
-              <div class="padding-icon"><img src="assets/img/svgs/.svg" style="border: 1px solid #6a59fd; border-radius: 50%;"></div>
+              <div class="padding-icon"><img src="assets/img/svgs/mysql.svg"></div>
+              <h3><a href="">MySQL</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <div class="padding-icon"><img src="assets/img/svgs/php.svg"></div>
               <h3><a href="">PHP</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
             <div class="icon-box">
-              <div class="padding-icon"><img src="assets/img/svgs/.svg"></div>
+              <div class="padding-icon"><img src="assets/img/svgs/java.svg"></div>
+              <h3><a href="">Java</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <div class="padding-icon"><img src="assets/img/svgs/python.svg"></div>
+              <h3><a href="">Python</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-6 mt-4">
+            <div class="icon-box">
+              <div class="padding-icon"><img src="assets/img/svgs/c.svg"></div>
               <h3><a href="">C</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
             <div class="icon-box">
-              <div class="padding-icon"><img src="assets/img/svgs/.svg"></div>
+              <div class="padding-icon"><img src="assets/img/svgs/cplus.svg"></div>
               <h3><a href="">C++</a></h3>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-4 col-6 mt-4">
-            <div class="icon-box">
-              <div class="padding-icon"><img src="assets/img/svgs/bs.svg"></div>
-              <h3><a href="">Bootstrap</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 col-6 mt-4">
@@ -290,13 +282,7 @@
                   <h3>Fabian Ferno</h3>
                   <h4>President &amp; Founder </h4>
                   <h4>Licet Pattarai</h4>
-                  <div class="stars">
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                  </div>
+ 
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     Proin iaculis purus consequat sem cure digni ssim donec
@@ -315,13 +301,7 @@
                   <h3>Veroni Shwetha</h3>
                   <h4>VP of Engineering</h4>
                   <h4>Licet Pattarai</h4>
-                  <div class="stars">
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                  </div>
+ 
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     Export tempor illum tamen malis malis eram quae irure esse
@@ -340,13 +320,7 @@
                   <h3>Raksha</h3>
                   <h4>Director of HR</h4>
                   <h4>Licet Pattarai</h4>
-                  <div class="stars">
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                  </div>
+ 
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     Enim nisi quem export duis labore cillum quae magna enim sint
@@ -364,13 +338,8 @@
                   />
                   <h3>Elizabeth Subhiksha</h3>
                   <h4>Director of Activities</h4>
-                  <div class="stars">
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                  </div>
+                  <h4>Licet Pattarai</h4>
+ 
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     Fugiat enim eram quae cillum dolore dolor amet nulla culpa
@@ -388,15 +357,9 @@
                     alt=""
                   />
                   <h3>Jonathan Ryndolf</h3>
-                  <h4>Design Advicer</h4>
+                  <h4>Design Advisor</h4>
                   <h4>Licet Pattarai</h4>
-                  <div class="stars">
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                    <i class="icofont-star"></i>
-                  </div>
+ 
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     Quis quorum aliqua sint quem legam fore sunt eram irure aliqua
@@ -419,7 +382,7 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 mt-5">
               <ul class="nav nav-tabs flex-column">
                 <li class="nav-item">
                   <a
@@ -445,7 +408,7 @@
               <div class="tab-content">
                 <div class="tab-pane active show" id="tab-1">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-8 details order-2 order-lg-1 mt-5">
                       <h3>School</h3>
                       <p class="font-italic">
                         Spartan Matriculation Higher Secondary School, Chennai, Tamil Nadu, India
@@ -466,7 +429,7 @@
                 </div>
                 <div class="tab-pane" id="tab-2">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-8 details order-2 order-lg-1 mt-5">
                       <h3>College</h3>
                       <p class="font-italic">
                         Loyola ICAM College of Engineering and Technology, Chennai, Tamil Nadu, India
@@ -487,7 +450,7 @@
                 </div>
                 <div class="tab-pane" id="tab-3">
                   <div class="row">
-                    <div class="col-lg-8 details order-2 order-lg-1">
+                    <div class="col-lg-8 details order-2 order-lg-1 mt-5">
                       <h3>Project Club</h3>
                       <p class="font-italic">
                         Loyola ICAM College of Engineering and Technology, Chennai, Tamil Nadu, India
@@ -672,13 +635,13 @@
               <h4>B.TECH INFORMATION TECHNOLOGY</h4>
               <h5>2019 - Present</h5>
               <p>
-                <em>Loyola ICAM College of Engineering and Technology, Chennai, Tamil Nadu, India</em>
+                <em>Loyola ICAM College of Engineering and Technology, Chennai</em>
               </p>
             </div>
             <div class="resume-item">
               <h4>HSC & SSLC</h4>
               <h5>2005 - 2019</h5>
-              <p><em>Spartan Matriculation Higher Secondary School, Chennai, Tamil Nadu, India</em></p>
+              <p><em>Spartan Matriculation Higher Secondary School, Chennai</em></p>
               
             </div>
             <h3 class="resume-title">Acheivements</h3>
@@ -692,12 +655,12 @@
             <div class="resume-item">
               <h4>Throwball</h4>
               <p><em>Spartan Matriculation Higher Secondary School, Chennai</em></p>
-              <p>District Runners up</p>
+              <p>District Runner-up</p>
             </div>
             <div class="resume-item">
               <h4>Technology</h4>
               <p><em>Spartan Matriculation Higher Secondary School, Chennai</em></p>
-              <p>School II in Computer Science - XIIth Board</p>
+              <p>School IInd in Computer Science - XIIth Board</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -758,7 +721,7 @@
             </div>
           </div>
 
-          <form action="https://formspree.io/f/xwkaorqz" method="post" class="php-email-form">
+          <form action="https://formspree.io/f/xwkaorqz" method="post" class="php-email-formm">
             <div class="form-row">
               <div class="col-md-6 form-group">
                 <input
@@ -829,17 +792,17 @@
       <div class="container">
         <h3>SHIRLEY</h3>
         <p>
-          Connect with me in
+          Connect with me
         </p>
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/shirley-christabel-a389ab1a2" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://twitter.com/shirley_christa" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.instagram.com/shirley.christabel" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/shirley-christabel-a389ab1a2" class="linkedin" target="_blank" rel="noopener noreferrer"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/shirley_christa" class="twitter" target="_blank" rel="noopener noreferrer"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.instagram.com/shirley.christabel" class="instagram" target="_blank" rel="noopener noreferrer"><i class="bx bxl-instagram"></i></a>
         </div>
-        <div class="copyright">
+        <!-- <div class="copyright">
           &copy; Copyright <strong><span>Shirley Christabel</span></strong
           >. All Rights Reserved
-        </div>
+        </div> -->
       </div>
     </footer>
     <!-- End Footer -->
