--- a/index.html
+++ b/index.html
@@ -418,9 +418,9 @@
                         Computer Science major in High school.
                       </p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-4 text-center order-1 order-lg-2 mt-5">
                       <img
-                        src="assets/img/specials-1.jpg"
+                        src="assets/img/spartan.jpg"
                         alt=""
                         class="img-fluid"
                       />
@@ -439,9 +439,9 @@
                         Degree duration of 4 years.
                       </p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-4 text-center order-1 order-lg-2 mt-5">
                       <img
-                        src="assets/img/specials-2.jpg"
+                        src="assets/img/licet.png"
                         alt=""
                         class="img-fluid"
                       />
@@ -461,9 +461,9 @@
 
                       </p>
                     </div>
-                    <div class="col-lg-4 text-center order-1 order-lg-2">
+                    <div class="col-lg-4 text-center order-1 order-lg-2 mt-5" style="clip-path: circle(30% at 50% 50%);">
                       <img
-                        src="assets/img/specials-3.jpg"
+                        src="assets/img/pattarai.jpg"
                         alt=""
                         class="img-fluid"
                       />
