--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                   data-gall="gallery-item"
                 >
                   <img
-                    src="assets/img/gallery/Pink.JPG"
+                    src="assets/img/gallery/Pink.jpg"
                     alt=""
                     class="img-fluid"
                   />
