--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" data-toggle="tab" href="#tab-2"
-                    >Diretor of Outreach</a
+                    >Director of Outreach</a
                   >
                 </li>
                 <li class="nav-item">
