--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                         Developed a website & android application from scratch for the copmany.
                       </p>
                       <p>
-                        Built with Reach JS and Reach Native
+                        Built with React JS and React Native
 
                       </p>
                     </div>
